Make public key comment configurable

--- a/templates/id_rsa.pub.j2
+++ b/templates/id_rsa.pub.j2
@@ -1,1 +1,1 @@
-ssh-rsa {{ ssh_rsa_public_key }} {{ ansible_user_id }}@{{ ansible_nodename }}
+ssh-rsa {{ ssh_rsa_public_key }} {{ ssh_rsa_public_key_comment }}
